<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#1E90FF">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/lj_network_error_text"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/lj_network_error_server"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/lj_network_error_contacts"/>

</LinearLayout>
