<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottle_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bottle_night_bg" >

    <RelativeLayout
        android:id="@+id/bottle_layout_title"
        android:background="#1e90ff"
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/bottle_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/yg_abc_ic_ab_back_holo_light"
                android:gravity="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="返回"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="漂流瓶"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/bottle_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/bottle_balloon"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/bottle_bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/bottle_board" />

        <ImageView
            android:id="@+id/bottle_bottom_throw_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/bottle_button_throw" />

        <ImageView
            android:id="@+id/bottle_bottom_pick_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bottle_button_fish" />

        <ImageView
            android:id="@+id/bottle_bottom_my_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/bottle_button_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:paddingTop="2dp"
            android:text="@string/friend_discard_bottle"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="2dp"
            android:text="@string/friend_collect_bottle"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bottle_bottom_my_bottle"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:paddingTop="2dp"
            android:text="@string/friend_my_bottle"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!-- 黑夜 -->

    <RelativeLayout
        android:id="@+id/bottle_night_bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/bottle_board" />

        <ImageView
            android:id="@+id/bottle_night_throw_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/bottle_button_throw_highlight" />

        <ImageView
            android:id="@+id/bottle_night_pick_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bottle_button_fish_highlight" />

        <ImageView
            android:id="@+id/bottle_night_my_bottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/bottle_button_list_highlight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:paddingTop="2dp"
            android:text="@string/friend_discard_bottle"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="2dp"
            android:text="@string/friend_collect_bottle"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bottle_night_my_bottle"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:paddingTop="2dp"
            android:text="@string/friend_my_bottle"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/bottle_night_moon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/bottle_moon_1"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/bottle_night_floodlight_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bottle_night_moon"
        android:layout_marginRight="18dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/nothing"
        android:src="@drawable/bottle_sandy_light_r001"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/bottle_night_floodlight_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="82dp"
        android:layout_marginTop="146dp"
        android:contentDescription="@string/nothing"
        android:src="@drawable/bottle_sandy_light_m001"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/bottle_night_floodlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="90dp"
        android:layout_marginTop="146dp"
        android:contentDescription="@string/nothing"
        android:src="@drawable/bottle_sandy_light_l001"
        android:visibility="visible" />

</RelativeLayout>